# argusflix-manager

./: .gitignore  PROJECT-IDEAS.md  README-DEPLOYMENT.md  README.md  install_ubuntu.sh  patch_m3u_models.py  uninstall_ubuntu.sh  update.patch
ArgusFlix-Manager/: CHANGELOG.md  CONTRIBUTING.md  Plugin_repo.md  Plugins.md  README.md  debian_install.sh  fixtures.json  install_ubuntu.sh  manage.py  patch_admin_center.py  patch_admin_center_auditor.py  patch_admin_center_cache.py  patch_admin_center_doctor.py  patch_admin_center_timeshift.py  patch_core_api.py  patch_core_api2.py  patch_core_api_auditor.py  patch_core_api_cache.py  patch_core_api_doctor.py  patch_core_tasks.py  patch_core_tasks2.py  patch_nav.py  patch_proxy_views.py  patch_tasks.py  patch_views.py  patch_views2.py  patch_views3.py  patch_views_m3u_epg.py  pyproject.toml  update_ubuntu.sh  version.py
ArgusFlix-Manager/.github/: FUNDING.yml
ArgusFlix-Manager/argusflix_manager/: __init__.py  admin.py  asgi.py  celery.py  consumers.py  gevent_patch.py  persistent_lock.py  routing.py  settings.py  urls.py  utils.py  wsgi.py
ArgusFlix-Manager/core/: admin.py  api_tmdb.py  api_urls.py  api_views.py  apps.py  command_utils.py  models.py  proxy_helper.py  serializers.py  stalker.py  stalker_mac_gen.py  tasks.py  tests.py  utils.py  views.py  xtream_codes.py
ArgusFlix-Manager/docker/: ArgusFlixBase  Dockerfile  build-dev.sh  comskip.ini  docker-compose.aio.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.aio.sh  entrypoint.celery.sh  entrypoint.sh  (+5 more)
(+726 files in other folders)
